# vortex-mq

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  extended-checks.yml
docs/: architecture.md  clustering.md  index.md  quickstart.md
examples/: pub_sub.py  rpc.py  work_queue.py
tests/: conftest.py  test_broker.py  test_cluster.py  test_delivery.py  test_persistence.py  test_routing.py
vortex/: __init__.py  ack.py  admin.py  auth.py  balancer.py  broker.py  client.py  client_sync.py  cluster.py  consumer.py  delivery.py  exceptions.py  message.py  metrics.py  persistence.py  pool.py  retry.py  routing.py  serialization.py  topology.py
