[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vortex-mq"
version = "0.1.2"
description = "In-memory distributed message broker with at-least-once delivery guarantees"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LaplacesD", email = "ILaplacesDemon@proton.me"},
]
dependencies = [
    "aiormq>=6.7",
    "pydantic>=2.0",
    "uvloop>=0.19",
    "orjson>=3.9",
    "pyzmq>=25.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "aiohttp>=3.9",
    "msgpack>=1.0",
    "prometheus-client>=0.18",
]
admin = [
    "aiohttp>=3.9",
]
monitoring = [
    "prometheus-client>=0.18",
]
serialization = [
    "msgpack>=1.0",
    "orjson>=3.9",
]
